--- a/Типи значень - рядки, цілі та дійсні числа.md
+++ b/Типи значень - рядки, цілі та дійсні числа.md
@@ -67,4 +67,4 @@ print(0.5 + 0.25)
 |--------------|----------------------|------------------------------|
 | `str`        | Рядок (string)       | `"Привіт"`, `"Python"`, `""` |
 | `int`        | Ціле число (integer) | `0`, `17`, `-3`, `2024`      |
-| `float`      | Дійсле число (float) | `3.14`, `0.0`, `-2.5`, `1.5` |
+| `float`      | Дійсне число (float) | `3.14`, `0.0`, `-2.5`, `1.5` |
