added article on updating variables

--- a/Змінні - присвоєння значень.md
+++ b/Змінні - присвоєння значень.md
@@ -1,4 +1,4 @@
-# Зміні - присвоєння значень
+# Змінні - присвоєння значень
 
 Змінна — це ім'я, яке ми даємо значенню, щоб потім використовувати його в коді.
 
