--- a/Змінні - присвоєння значень.md
+++ b/Змінні - присвоєння значень.md
@@ -16,6 +16,22 @@ print(name)
 
 У цьому прикладі `name` — це змінна, якій присвоєно значення `"Оля"`. Знак `=` означає "присвоїти" або "зберегти в". Коли ми викликаємо `print(name)`, Python знаходить значення змінної і виводить його на екран.
 
+## Присвоєння результату обчислення
+
+Змінна може зберігати результат обчислення, наприклад, скільки яблук залишиться після частування друзів:
+
+```python
+apples = 8
+friends = 3
+apples_left = apples - friends
+print(apples_left)
+```
+
+Результат:
+```
+5
+```
+
 ## Навіщо використовувати змінні
 
 Змінні роблять код зрозумілішим і простішим для зміни. Наприклад, якщо потрібно вивести одне і те саме значення кілька разів:
