--- a/Базові операції з рядками.md
+++ b/Базові операції з рядками.md
@@ -1,18 +1,19 @@
 # Базові операції з рядками
 
-Рядки у Python — це послідовності символів, з якими часто працюють під час друкування повідомлень.
+Рядки у Python — це послідовності символів, з якими часто працюють під час друкування повідомлень або роботи з текстом.
+
+Усі рядки в Python це значення типу `str`.
 
 ## Об'єднання рядків оператором `+` (конкатенація)
 
 Конкатенація — це об'єднання кількох рядків в один. Використовується, коли потрібно зібрати текст із частин.
 
 ```python
-print("Hello, " + "world!")
+print("Привіт, " + "світе!")
 ```
-
 Результат:
 ```
-Hello, world!
+Привіт, світе!
 ```
 
 ## Повторення рядка оператором `*`
@@ -20,12 +21,12 @@ Hello, world!
 Оператор `*` дозволяє повторити рядок задану кількість разів. Це зручно для простого форматування під час друкування, створення розділювачів, повторення шаблонів.
 
 ```python
-print("-" * 10)
-print(("ha " ) * 3)
+print("-" * 11)
+print(("Ха! " ) * 3)
 ```
 
 Результат:
 ```
-----------
-ha ha ha 
+-----------
+Ха! Ха! Ха! 
 ```
