fixed spce preaks in table

--- a/Базові операції з числами.md
+++ b/Базові операції з числами.md
@@ -41,12 +41,12 @@ print(9 % 4)    # залишок від ділення
 
 | Вираз у Python | Пояснення | Приклади |
 |---|---|---|
-| `a + b` | додати `a` і `b` | `2 + 3`<br>`# результат: 5`<br>`1.5 + 0.5`<br>`# результат: 2.0` |
-| `a - b` | відняти `b` від `a` | `7 - 4`<br>`# результат: 3`<br>`3.0 - 5`<br>`# результат: -2.0` |
-| `a * b` | помножити `a` на `b` | `6 * 7`<br>`# результат: 42`<br>`2.5 * 2`<br>`# результат: 5.0` |
-| `a / b` | поділити `a` на `b` | `7 / 2`<br>`# результат: 3.5`<br>`5 / 2`<br>`# результат: 2.5` |
-| `a ** b` | піднести `a` до степеня `b` | `2 ** 3`<br>`# результат: 8`<br>`5 ** 2`<br>`# результат: 25` |
-| `a ** 0.5` | квадратний корінь з `a` | `9 ** 0.5`<br>`# результат: 3.0`<br>`25 ** 0.5`<br>`# результат: 5.0` |
-| `a // b` | цілочисельне ділення (ціла частина) | `5 // 2`<br>`# результат: 2`<br>`6 // 2`<br>`# результат: 3`<br>`8 // 3`<br>`# результат: 2` |
-| `a % b` | остача від ділення | `5 % 2`<br>`# результат: 1`<br>`6 % 2`<br>`# результат: 0`<br>`8 % 3`<br>`# результат: 2` |
+| `a + b` | додати `a` і `b` | `2 + 3 # результат: 5`<br>`1.5 + 0.5 # результат: 2.0` |
+| `a - b` | відняти `b` від `a` | `7 - 4 # результат: 3`<br>`3.0 - 5 # результат: -2.0` |
+| `a * b` | помножити `a` на `b` | `6 * 7 # результат: 42`<br>`2.5 * 2 # результат: 5.0` |
+| `a / b` | поділити `a` на `b` | `7 / 2 # результат: 3.5`<br>`5 / 2 # результат: 2.5` |
+| `a ** b` | піднести `a` до степеня `b` | `2 ** 3 # результат: 8`<br>`5 ** 2 # результат: 25` |
+| `a ** 0.5` | квадратний корінь з `a` | `9 ** 0.5 # результат: 3.0`<br>`25 ** 0.5 # результат: 5.0` |
+| `a // b` | цілочисельне ділення (ціла частина) | `5 // 2 # результат: 2`<br>`6 // 2 # результат: 3`<br>`8 // 3 # результат: 2` |
+| `a % b` | остача від ділення | `5 % 2 # результат: 1`<br>`6 % 2 # результат: 0`<br>`8 % 3 # результат: 2` |
 
