--- a/Перетворення типів.md
+++ b/Перетворення типів.md
@@ -2,8 +2,8 @@
 * *[Вивід - функція print](Вивід%20-%20функція%20print.md)*
 * *[Типи значень - рядки, цілі та дійсні числа](Типи%20значень%20-%20рядки,%20цілі%20та%20дійсні%20числа.md)*
 * *[Змінні - присвоєння значень](Змінні%20-%20присвоєння%20значень.md)*
-* *[Базові операції з числами.md](Базові%20операції%20з%20числами.md)*
-* *[Базові операції з рядками.md](Базові%20операції%20з%20рядками.md)*
+* *[Базові операції з числами](Базові%20операції%20з%20числами.md)*
+* *[Базові операції з рядками](Базові%20операції%20з%20рядками.md)*
 
 # Перетворення типів
 
