added article on flow charts

--- a/Залежності.md
+++ b/Залежності.md
@@ -12,6 +12,8 @@ graph BT
     F["Базові операції з рядками"]
     G["Перетворення типів"]
     H["Ввід - функція input"]
+    I["Блок-схеми - послідовне виконання, введення та виведення"]
+    J["Логічні значення та логічний тип даних"]
     
     B --> A
     C --> A
@@ -27,8 +29,14 @@ graph BT
     G --> E
     G --> F
     H --> A
-    H --> C
     H --> B
+    H --> C
     H --> G
+    I --> A
+    I --> C
+    I --> H
+    J --> A
+    J --> B
+    J --> C
 ```
 
