added comparison operators

--- a/Залежності.md
+++ b/Залежності.md
@@ -14,6 +14,7 @@ graph BT
     H["Ввід - функція input"]
     I["Блок-схеми - послідовне виконання, введення та виведення"]
     J["Логічні значення та логічний тип даних"]
+    K["Операції порівняння"]
     
     B --> A
     C --> A
@@ -38,5 +39,9 @@ graph BT
     J --> A
     J --> B
     J --> D
+    K --> A
+    K --> B
+    K --> C
+    K --> J
 ```
 
