--- a/Блок-схеми - послідовне виконання, введення та виведення.md
+++ b/Блок-схеми - послідовне виконання, введення та виведення.md
@@ -20,7 +20,7 @@ print("Привіт, світе!")
 ```mermaid
 flowchart TD
     Start([Початок])
-    Output[/"Друкувати: Привіт, світе!"\]
+    Output[/"Друкувати: Привіт, світе!"/]
     End([Кінець])
     
     Start --> Output
@@ -58,14 +58,16 @@ print("Площа квадрата:", area)
 
 ```mermaid
 flowchart TD
-    Output1[/"Друкувати: Введіть довжину сторони квадрата:"\]
-    Input[/"Зчитати число → side"\]
+    Start([Початок])
+    Input[/"Зчитати число → side"/]
     Process["side * side → area"]
-    Output2[/"Друкувати: Площа квадрата: area"\]
+    Output[/"Друкувати: area"/]
+    End([Кінець])
     
-    Output1 --> Input
+    Start --> Input
     Input --> Process
-    Process --> Output2
+    Process --> Output
+    Output --> End
 ```
 
 Така послідовність дій є прикладом послідовного виконання: друкуємо підказку, зчитуємо число, обчислюємо площу й друкуємо результат.
