--- a/Залежності.md
+++ b/Залежності.md
@@ -15,6 +15,7 @@ graph BT
     I["Блок-схеми - послідовне виконання, введення та виведення"]
     J["Логічні значення та логічний тип даних"]
     K["Операції порівняння"]
+    L["Розгалуження"]
     
     B --> A
     C --> A
@@ -43,5 +44,9 @@ graph BT
     K --> B
     K --> C
     K --> J
+    L --> A
+    L --> C
+    L --> J
+    L --> K
 ```
 
