spdated article on branching

--- a/Розгалуження.md
+++ b/Розгалуження.md
@@ -6,13 +6,13 @@
 
 # Розгалуження
 
-У програмах часто потрібно виконувати різні дії залежно від умови. Для цього в Python є **розгалуження** — конструкції `if`, `if - else` та `if - elif - else`. Вони дозволяють перевіряти умови й обирати один з кількох шляхів виконання коду.
+У програмах часто потрібно виконувати різні дії залежно від певної умови. Для цього в Python використовуються розгалуження — конструкції `if`, `if - else` та `if - elif - else`. Вони дозволяють перевіряти умови (наприклад, результати порівнянь) і обирати один з кількох шляхів виконання коду (гілок алгоритму).
 
 ---
 
 ## Просте розгалуження `if`
 
-Конструкція `if` дозволяє **виконати блок коду тільки тоді, коли умова істинна**. Якщо умова хибна, цей блок просто пропускається.
+Конструкція `if` дозволяє виконати блок коду (гілку алгоритму) тільки тоді, коли умова істинна. Якщо умова хибна, цей блок просто пропускається.
 
 ```python
 temperature = 25
@@ -21,29 +21,36 @@ if temperature > 20:
     print("На вулиці тепло")
 ```
 
-**Результат друкування:**
+Результат:
 
 ```text
 На вулиці тепло
 ```
 
-Якщо змінити `temperature` на значення, що не більше 20, повідомлення не буде надруковано, бо тіло `if` пропускається.
+Структура конструкції `if` складається з двох частин:
 
-**Блок-схема для `if`:**
+* Умова — це вираз після ключового слова `if`, який обчислюється до логічного значення (`True` або `False`). У прикладі вище умова — це `temperature > 20`. Після умови обов'язково ставиться двокрапка `:`.
+
+* Блок коду (гілка алгоритму) — це один або кілька рядків коду, які виконуються, якщо умова істинна. Блок коду пишеться з відступом (зазвичай 4 пробіли) після двокрапки. У прикладі блок складається з одного рядка `print("На вулиці тепло")`.
+
+Важливо: всі рядки блоку повинні мати однаковий відступ. Коли відступ закінчується, закінчується і блок коду.
+
+Блок-схема цієї програми:
 
 ```mermaid
 flowchart TD
-    Start([Початок]) --> B{Умова істинна?}
-    B -- Ні --> End
-    B -- Так --> C[Виконати блок if]
-    C --> End([Кінець])
+    Start([Початок]) --> A[temperature = 25]
+    A --> B{temperature > 20?}
+    B -- Так --> C[/"Друкувати:<br>На вулиці тепло"/]
+    B -- Ні --> End([Кінець])
+    C --> End
 ```
 
----
+Якщо змінити `temperature` на значення, що не більше 20, повідомлення не буде надруковано, бо тіло `if` пропускається.
 
 ## Розгалуження `if - else`
 
-Конструкція `if - else` використовується, коли потрібно **обрати між двома взаємовиключними варіантами**: один код виконується, якщо умова істинна, інший — якщо хибна.
+Конструкція `if - else` використовується, коли потрібно обрати між двома взаємовиключними варіантами: один блок коду виконується, якщо умова істинна, інший — якщо хибна.
 
 ```python
 age = 15
@@ -54,37 +61,33 @@ else:
     print("Дитячий квиток")
 ```
 
-**Можливі результати друкування:**
-
-- якщо `age = 20`:
-
-```text
-Дорослий квиток
-```
-
-- якщо `age = 15`:
+Результат:
 
 ```text
 Дитячий квиток
 ```
 
-**Блок-схема для `if - else`:**
+Блок-схема цієї програми:
 
 ```mermaid
 flowchart TD
-    Start([Початок]) --> B{Умова істинна?}
-    B -- Так --> C[Виконати блок if]
-    B -- Ні --> D[Виконати блок else]
+    Start([Початок]) --> A[age = 15]
+    A --> B{age >= 18?}
+    B -- Так --> C[/"Друкувати:<br>Дорослий квиток"/]
+    B -- Ні --> D[/"Друкувати:<br>Дитячий квиток"/]
     C --> End([Кінець])
     D --> End
 ```
 
----
+У цьому прикладі спочатку перевіряється умова `age >= 18`. Якщо вона істинна (вік 18 або більше), виконується блок `if` і друкується "Дорослий квиток". Якщо умова хибна (вік менше 18), виконується блок `else` і друкується "Дитячий квиток".
+
+Якщо змінити `age` на 20, умова `age >= 18` стане істинною (20 більше 18), тому виконається блок `if` і буде надруковано "Дорослий квиток". Блок `else` у цьому випадку пропуститься.
+
 
 ## Розгалуження `if - elif - else`
 
-Якщо можливих варіантів більше ніж два, зручно використовувати **ланцюжок умов** `if - elif - else`.  
-`elif` (скорочено від *else if*) додає нову умову, яка перевіряється, якщо попередні умови виявилися хибними.
+Для вибору між трьома або більше варіантами використовується ланцюжок умов `if - elif - else`. Ключове слово `elif` (скорочено від *else if*) додає нову умову, яка перевіряється лише якщо всі попередні умови виявилися хибними. Виконується тільки перший блок, умова якого стала істинною. Після цього всі наступні `elif` та `else` вже не перевіряються.
+
 
 ```python
 score = 78  # тестовий бал від 0 до 100
@@ -96,33 +99,30 @@ elif score >= 70:
 elif score >= 50:
     print("Оцінка: задовільно")
 else:
-    print("Оцінка: потрібно підтягнутися")
+    print("Оцінка: незадовільно")
 ```
 
-**Приклад результатів друкування:**
-
-- `score = 95` → `Оцінка: відмінно`
-- `score = 78` → `Оцінка: добре`
-- `score = 55` → `Оцінка: задовільно`
-- `score = 30` → `Оцінка: потрібно підтягнутися`
-
-У цьому ланцюжку **виконується тільки перший підходящий блок**. Якщо якась умова стала істинною, всі наступні `elif` та `else` вже не перевіряються.
-
-**Блок-схема для `if - elif - else`:**
+Блок-схема цієї програми:
 
 ```mermaid
 flowchart TD
-    Start([Початок]) --> B{Умова 1 істинна?}
-    B -- Так --> C[Блок if]
-    B -- Ні --> D{Умова 2 істинна?}
-    D -- Так --> E[Блок першого elif]
-    D -- Ні --> F{Умова 3 істинна?}
-    F -- Так --> G[Блок другого elif]
-    F -- Ні --> H[Блок else]
+    Start([Початок]) --> A[score = 78]
+    A --> B{score >= 90?}
+    B -- Так --> C[/"Друкувати:<br>Оцінка: відмінно"/]
+    B -- Ні --> D{score >= 70?}
+    D -- Так --> E[/"Друкувати:<br>Оцінка: добре"/]
+    D -- Ні --> F{score >= 50?}
+    F -- Так --> G[/"Друкувати:<br>Оцінка: задовільно"/]
+    F -- Ні --> H[/"Друкувати:<br>Оцінка: незадовільно"/]
     C --> End([Кінець])
     E --> End
     G --> End
     H --> End
 ```
 
----
+Результат:
+
+```text
+Оцінка: добре
+```
+
