updated branching article

--- a/Розгалуження.md
+++ b/Розгалуження.md
@@ -46,7 +46,7 @@ flowchart TD
     C --> End
 ```
 
-Якщо змінити `temperature` на значення, що не більше 20, повідомлення не буде надруковано, бо тіло `if` пропускається.
+Якщо змінити `temperature` на значення, що не більше 20, повідомлення не буде надруковано, тому що блок `if` пропускається.
 
 ## Розгалуження `if - else`
 
