added article on and or not

--- a/Залежності.md
+++ b/Залежності.md
@@ -15,7 +15,8 @@ graph BT
     I["Блок-схеми - послідовне виконання, введення та виведення"]
     J["Логічні значення та логічний тип даних"]
     K["Операції порівняння"]
-    L["Розгалуження"]
+    L["Логічні операції"]
+    M["Розгалуження"]
     
     B --> A
     C --> A
@@ -45,8 +46,12 @@ graph BT
     K --> C
     K --> J
     L --> A
-    L --> C
     L --> J
     L --> K
+    L --> M
+    M --> A
+    M --> C
+    M --> J
+    M --> K
 ```
 
