added article on kw args

--- a/Залежності.md
+++ b/Залежності.md
@@ -17,6 +17,7 @@ graph BT
     K["Операції порівняння"]
     L["Логічні операції"]
     M["Розгалуження"]
+    N["Виклик функцій з використанням ключових аргументів"]
     
     B --> A
     C --> A
@@ -53,5 +54,6 @@ graph BT
     M --> C
     M --> J
     M --> K
+    N --> A
 ```
 
