--- a/Логічні вирази - операції порівняння.md
+++ b/Логічні вирази - операції порівняння.md
@@ -8,39 +8,39 @@
 
 Операції порівняння дозволяють порівнювати значення та отримувати логічний результат (`True` або `False`). Вони допомагають перевіряти умови та приймати рішення в програмі, наприклад, чи достатньо грошей для покупки або чи пройшов учень іспит.
 
-## Перевірка рівності (==)
+## Перевірка рівності (`==`)
 
 Оператор `==` перевіряє, чи два значення рівні між собою:
 
 ```python
 age = 18
-print(age == 18)
-print(age == 20)
+print("Вік дорівнює 18:", age == 18)
+print("Вік дорівнює 16:", age == 16)
 ```
 
 Результат:
 ```
-True
-False
+Вік дорівнює 18: True
+Вік дорівнює 16: False
 ```
 
-## Перевірка нерівності (!=)
+## Перевірка нерівності (`!=`)
 
 Оператор `!=` перевіряє, чи два значення не рівні між собою:
 
 ```python
-age = 16
-print(age != 18)
-print(age != 16)
+age = 18
+print("Вік не дорівнює 18:", age != 18)
+print("Вік не дорівнює 16:", age != 16)
 ```
 
 Результат:
 ```
-True
-False
+Вік не дорівнює 18: False
+Вік не дорівнює 16: True
 ```
 
-## Порівняння порядку (>, <, >=, <=)
+## Порівняння порядку (`>`, `<`, `>=`, `<=`)
 
 Оператори порівняння порядку дозволяють перевіряти, чи одне значення більше або менше за інше:
 
@@ -50,15 +50,19 @@ False
 - `<=` — перевіряє, чи перше значення менше або дорівнює другому
 
 ```python
-temperature = 70
-print(temperature > 0)
-print(temperature > 100)
+age = 18
+print("Вік більше 17:", age > 17)
+print("Вік менше 17:", age < 17)
+print("Вік більше або дорівнює 18:", age >= 18)
+print("Вік менше або дорівнює 16:", age <= 16)
 ```
 
 Результат:
 ```
-True
-False
+Вік більше 17: True
+Вік менше 17: False
+Вік більше або дорівнює 18: True
+Вік менше або дорівнює 16: False
 ```
 
 ## Ланцюгові порівняння
@@ -66,15 +70,15 @@ False
 Python дозволяє об'єднувати кілька порівнянь в один вираз. Наприклад, можна перевірити, чи значення знаходиться в певному діапазоні:
 
 ```python
-temperature = 22
-print(20 < temperature < 25)
-print(15 < temperature < 20)
+age = 18
+print("Вік від 13 до 17:", 13 <= age <= 17)
+print("Вік від 18 до 65:", 18 <= age <= 65)
 ```
 
 Результат:
 ```
-True
-False
+Вік від 13 до 17: False
+Вік від 18 до 65: True
 ```
 
 ## Таблиця операцій порівняння
