--- a/Залежності.md
+++ b/Залежності.md
@@ -24,6 +24,7 @@ graph BT
     N["Виклик функцій з використанням ключових аргументів"]
     O["Визначення функцій"]
     P["Списки"]
+    T["Ведення списків"]
 
     B --> A
     C --> A
@@ -75,5 +76,9 @@ graph BT
     S --> Q
     R --> Q
     R --> P
+    T --> H
+    T --> P
+    T --> Q
+    T --> G
 ```
 
