updated references, fixed typos

--- a/Введення списків.md
+++ b/Введення списків.md
@@ -3,7 +3,7 @@
 * *[Списки](Списки.md)*
 <!--* *[Перетворення типів](Перетворення%20типів.md)*-->
 
-# Ведення списків
+# Введення списків
 
 Часто потрібно зчитати не одне значення, а одразу багато - наприклад, список слів<!-- або список чисел-->.
 
@@ -49,5 +49,4 @@ print("Список чисел:", numbers)
 ```
 
 Таким чином, `split()` допомагає перетворити один рядок введених даних на список рядків, а `map(int, ...)` - перетворити всі елементи цього списку на цілі числа. -->
-
 <!-- TODO proofread and update -->
