--- a/Залежності.md
+++ b/Залежності.md
@@ -24,7 +24,8 @@ graph BT
     N["Виклик функцій з використанням ключових аргументів"]
     O["Визначення функцій"]
     P["Списки"]
-    T["Ведення списків"]
+    T["Введення списків"]
+    U["Використання None"]
 
     B --> A
     C --> A
@@ -80,5 +81,7 @@ graph BT
     T --> P
     T --> Q
     T --> G
+    U --> H
+    U --> P
 ```
 
