updated logical ops article

--- a/Логічні операції.md
+++ b/Логічні операції.md
@@ -27,7 +27,9 @@ else:
 Можна йти на прогулянку
 ```
 
-Якщо змінити значення так, що хоча б одна умова стане хибною:
+У наведеному прикладі використано логічний оператор `and`, щоб перевірити дві умови одночасно: температура має бути більшою за 20 та час меншим за 20. Якщо обидві умови істинні, програма надрукує повідомлення про можливість прогулянки. Якщо хоча б одна умова хибна, буде надруковано, що краще залишитися вдома.
+
+Наприклад, якщо змінити значення так, що хоча б одна умова стане хибною:
 
 ```python
 temperature = 15
@@ -63,6 +65,8 @@ else:
 Потрібно одягнутися тепліше
 ```
 
+У наведеному вище прикладі використано логічний оператор `or`, який дозволяє перевірити одразу дві умови: температура нижча за 10 або швидкість вітру більша за 15. Якщо хоча б одна умова істинна, виводиться порада одягнутися тепліше. Якщо обидві умови хибні, тоді програма радить одягнутися легше.
+
 Якщо обидві умови хибні:
 
 ```python
@@ -87,15 +91,16 @@ else:
 ```python
 is_raining = False
 
+print("Йде дощ:", is_raining)
+
 if not is_raining:
-    print("Можна йти без парасольки")
-else:
-    print("Потрібна парасолька")
+    print("Парасолька не потрібна")
 ```
 
 Результат:
 ```
-Можна йти без парасольки
+Йде дощ: False
+Парасолька не потрібна
 ```
 
 Якщо змінити значення:
@@ -103,15 +108,15 @@ else:
 ```python
 is_raining = True
 
+print("Йде дощ:", is_raining)
+
 if not is_raining:
-    print("Можна йти без парасольки")
-else:
-    print("Потрібна парасолька")
+    print("Парасолька не потрібна")
 ```
 
 Результат:
 ```
-Потрібна парасолька
+Йде дощ: True
 ```
 
 ## Таблиця логічних операцій
@@ -122,3 +127,4 @@ else:
 | `a or b` | повертає `True`, якщо хоча б одна умова істинна | `True or False # результат: True`<br>`False or True # результат: True`<br>`False or False # результат: False` |
 | `not a` | інвертує логічне значення | `not True # результат: False`<br>`not False # результат: True` |
 
+<!-- TODO, decide, maybe rename, review -->
